--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
     .popup-content:hover {
       background: #f2f2f2;
     }
-  </style>
+  
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+}
+
+.bounce {
+  animation: bounce 1s infinite;
+}
+</style>
 </head>
 <body>
 <div id="map"></div>
@@ -157,17 +166,34 @@
   let userMarker = null;
   let currentPopup = null;
 
-  function showPopupIfNearby(userLng, userLat) {
-    let nearby = false;
-    markers.forEach(m => {
+  
+  function updateMarkersByDistance(userLng, userLat) {
+    markers.forEach((m, i) => {
+      const el = markerElements[i];
       const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
 
-      // 바운스 효과 (50m 이내)
-      if (distance < 50) {
-        m.el.classList.add('bounce');
+      if (distance < 70) {
+        if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
+          if (currentPopup) currentPopup.remove();
+          const popupHTML = `<div class="popup-content">${m.title}</div>`;
+          currentPopup = new mapboxgl.Popup({ closeButton: false })
+            .setLngLat([m.lng, m.lat])
+            .setHTML(popupHTML)
+            .addTo(map);
+        }
+
+        if (!el.classList.contains('bounce')) {
+          el.classList.add('bounce');
+        }
       } else {
-        m.el.classList.remove('bounce');
+        if (currentPopup && currentPopup._lngLat.lng === m.lng) {
+          currentPopup.remove();
+          currentPopup = null;
+        }
+        el.classList.remove('bounce');
       }
+    });
+  }
 
       // 팝업 조건 (20m 이내)
       if (distance < 20) {
@@ -206,7 +232,7 @@
     } else {
       userMarker.setLngLat([longitude, latitude]);
     }
-    showPopupIfNearby(longitude, latitude);
+    updateMarkersByDistance(longitude, latitude);
   }, (error) => {
     console.error("Geolocation error:", error);
   });
