--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       border-radius: 0;
       pointer-events: auto;
     }
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-15px); }
-    }
 
     .bounce {
-      animation: bounce 0.6s infinite;
+      animation: bounce 1s infinite;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
     .mapboxgl-popup-content {
@@ -81,8 +82,7 @@
     bearing: 314
   });
 
-  map.on('load', () => {
-    const tiles = [
+  const tiles = [
     { id: 'tile_0_0', url: 'tile_0_0.jpeg', coords: [[126.83163, 37.57312], [126.83427, 37.57312], [126.83427, 37.57103], [126.83163, 37.57103]] },
     { id: 'tile_0_1', url: 'tile_0_1.jpeg', coords: [[126.83427, 37.57312], [126.83691, 37.57312], [126.83691, 37.57103], [126.83427, 37.57103]] },
     { id: 'tile_0_2', url: 'tile_0_2.jpeg', coords: [[126.83691, 37.57312], [126.83955, 37.57312], [126.83955, 37.57103], [126.83691, 37.57103]] },
@@ -93,7 +93,8 @@
     { id: 'tile_2_1', url: 'tile_2_1.jpeg', coords: [[126.83427, 37.56893], [126.83691, 37.56893], [126.83691, 37.56684], [126.83427, 37.56684]] },
     { id: 'tile_2_2', url: 'tile_2_2.jpeg', coords: [[126.83691, 37.56893], [126.83955, 37.56893], [126.83955, 37.56684], [126.83691, 37.56684]] }
   ];
-  
+
+  map.on('load', () => {
     tiles.forEach(tile => {
       map.addSource(tile.id, {
         type: 'image',
@@ -110,73 +111,83 @@
   });
 
   const markers = [
-  { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-  { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
-  { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
-  { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
-];
+    { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터' },
+    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원' },
+    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실' }
+  ];
 
-let currentPopup = null;
-
-// 마커 추가 및 el 저장
-markers.forEach(m => {
-  const el = document.createElement('div');
-  el.className = 'custom-marker';
-  el.style.backgroundImage = `url(${m.img})`;
-  el.style.width = '75px';
-  el.style.height = '75px';
-
-  // el을 마커 객체에 저장
-  m.el = el;
-
-  new mapboxgl.Marker(el)
-    .setLngLat([m.lng, m.lat])
-    .addTo(map);
-});
-
-// 사용자 위치 갱신 시
-function showPopupIfNearby(userLng, userLat) {
-  let nearby = false;
+  let currentPopup = null;
+  const markerElements = [];
 
   markers.forEach(m => {
-    const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+    const el = document.createElement('div');
+    el.className = 'custom-marker';
+    el.style.backgroundImage = `url(${m.img})`;
+    el.style.width = '75px';
+    el.style.height = '75px';
+    el.style.display = 'none';
+    m.el = el;
 
-    if (distance < 50) {
-      m.el.classList.add('bounce');  // 50m 이내면 바운스
-    } else {
-      m.el.classList.remove('bounce');  // 아니면 해제
-    }
+    new mapboxgl.Marker(el)
+      .setLngLat([m.lng, m.lat])
+      .addTo(map);
 
-    if (distance < 20) {
-      nearby = true;
-      if (!currentPopup || currentPopup._lngLat.lng !== m.lng || currentPopup._lngLat.lat !== m.lat) {
-        if (currentPopup) currentPopup.remove();
-
-        const popupHTML = `
-          <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
-            ${m.title}
-          </div>
-        `;
-        currentPopup = new mapboxgl.Popup()
-          .setLngLat([m.lng, m.lat])
-          .setHTML(popupHTML)
-          .addTo(map);
-      }
-    }
+    markerElements.push(el);
   });
 
-  if (!nearby && currentPopup) {
-    currentPopup.remove();
-    currentPopup = null;
+  map.on('zoom', () => {
+    const zoom = map.getZoom();
+    markerElements.forEach(el => {
+      el.style.display = (zoom >= 16) ? 'block' : 'none';
+    });
+  });
+
+  function showPopupIfNearby(userLng, userLat) {
+    let nearby = false;
+
+    markers.forEach(m => {
+      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+
+      if (distance < 50) {
+        m.el.classList.add('bounce');
+      } else {
+        m.el.classList.remove('bounce');
+      }
+
+      if (distance < 20) {
+        nearby = true;
+        if (!currentPopup || currentPopup._lngLat.lng !== m.lng || currentPopup._lngLat.lat !== m.lat) {
+          if (currentPopup) currentPopup.remove();
+          const popupHTML = `
+            <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
+              ${m.title}
+            </div>
+          `;
+          currentPopup = new mapboxgl.Popup()
+            .setLngLat([m.lng, m.lat])
+            .setHTML(popupHTML)
+            .addTo(map);
+        }
+      }
+    });
+
+    if (!nearby && currentPopup) {
+      currentPopup.remove();
+      currentPopup = null;
+    }
   }
-}
+
+  let userMarker = null;
 
   navigator.geolocation.watchPosition((position) => {
     const { latitude, longitude } = position.coords;
+
     map.easeTo({
       center: [longitude, latitude],
       duration: 1000
     });
+
     if (!userMarker) {
       const el = document.createElement('div');
       el.className = 'custom-marker';
@@ -185,6 +196,7 @@ function showPopupIfNearby(userLng, userLat) {
     } else {
       userMarker.setLngLat([longitude, latitude]);
     }
+
     showPopupIfNearby(longitude, latitude);
   }, (error) => {
     console.error("Geolocation error:", error);
