--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
       ]
     },
-    center: [126.8355, 37.5700],
+    center: [longitude, latitude],
     zoom: 15,
     bearing: 314
   });
